# KSR_MPI

./: CMakeLists.txt  CMakeLists.txt.user.b5decbd  README.md  check.py  check_debug.py  check_debug_main.py  check_debug_test.py  py_debug.txt  qq.py
qt_gui/: CMakeLists.txt
qt_gui/resources/: resources.qrc
qt_gui/src/: csvdatagenerator.cpp  csvdatagenerator.h  gshaperegion.cpp  gshaperegion.h  heatmapgenerator.cpp  heatmapgenerator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_new.cpp  mainwindow_new.h  shaperegion.cpp  shaperegion.h  squareshaperegion.cpp  squareshaperegion.h
qt_gui/src/tabs/: help_tab_widget.cpp  help_tab_widget.h  progress_tab_widget.cpp  progress_tab_widget.h  solver_tab_widget.cpp  solver_tab_widget.h  table_tab_widget.cpp  table_tab_widget.h  visualization_3d_tab_widget.cpp  visualization_3d_tab_widget.h  visualization_tab_widget.cpp  visualization_tab_widget.h
solver/: CMakeLists.txt  README.md  default_functions.cpp  dirichlet_solver.cpp  dirichlet_solver.hpp  dirichlet_solver_2_main.cpp  dirichlet_solver_square.cpp  dirichlet_solver_square.hpp  grid_system.cpp  grid_system.h  grid_system_square.cpp  grid_system_square.h  main.cpp  matrix_free_system.cpp  matrix_free_system.hpp  msg_solver.cpp  msg_solver.hpp  solver.hpp
